--- a/css/style.css
+++ b/css/style.css
@@ -87,19 +87,19 @@ h1{
     width: 80%;
 }
 
-#second {
+/*#s {
     margin: 0 auto;
     background-position: center;
     background-size: cover;
     background-color: darkslategray;
     height: 110vh;
     max-width: 1200px;
-    /*position: relative;*/
+    /*position: relative;
     display: flex;
     justify-content: center;
-}
+}*/
 
-#third{
+#second{
     margin: 0 auto;
     background-position: center;
     background-size: cover;
@@ -170,5 +170,28 @@ footer{
     #photo1, #photo2, #photo3{
         width: 260px;
         height: 173px;
+    }
+    #second{
+        max-width: 300px;
+        height: 1000px;
+    }
+    .info_sentence{
+        font-size: 20px;
+        width: 260px;
+    }
+    .my_form{
+        display: flex;
+        flex-direction: column;
+    }
+    footer{
+        width: 300px;
+        height: 180px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    footer > img{
+        width: 30px;
+        height: 30px;
     }
 }
