Updated with LESS

--- a/css/style.css
+++ b/css/style.css
@@ -10,83 +10,77 @@
     justify-content: center;
 }
 */
-.top_info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#center-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-
-
-#cookies{
-    display: flex;
-    flex-direction: column;
+.top_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.empty{
-    width: 1200px;
-    height: 20px;
+#cookies {
+  display: flex;
+  flex-direction: column;
 }
-
-.cookies_info{
-    width: 1200px;
-    display: flex;
-    justify-content: center;
-    background-color: darkolivegreen;
+.empty {
+  width: 1200px;
+  height: 20px;
 }
-
-.buttons{
-    display: flex;
-    justify-content: center;
+.cookies_info {
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  background-color: darkolivegreen;
 }
-
-#first{
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    background-position: center;
-    background-size: cover;
-    background-color: darkslategray;
-    height: 110vh;
-    max-width: 1200px;
-    /*position: relative;*/
+.buttons {
+  display: flex;
+  justify-content: center;
 }
-
-.top_sentence{
-    margin-top: 10px;
+#first {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  background-position: center;
+  background-size: cover;
+  background-color: darkslategray;
+  height: 110vh;
+  max-width: 1200px;
+  /*position: relative;*/
 }
-
-h1{
-    font-size: 50px;
-    color: brown;
-    display: flex;
-    justify-content: center;
+.top_sentence {
+  margin-top: 10px;
 }
-
-.photos{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
+h1 {
+  font-size: 50px;
+  color: brown;
+  display: flex;
+  justify-content: center;
 }
-
-.frame{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 350px;
-    height: 233px;
+.photos {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
-
-.under_photo{
-    width: 350px;
-    margin: 20px;
+.frame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  height: 233px;
 }
-
-#photo1, #photo2, #photo3{
-    height: 80%;
-    width: 80%;
+.under_photo {
+  width: 350px;
+  margin: 20px;
 }
-
+#photo1,
+#photo2,
+#photo3 {
+  height: 80%;
+  width: 80%;
+}
 /*#s {
     margin: 0 auto;
     background-position: center;
@@ -98,100 +92,99 @@ h1{
     display: flex;
     justify-content: center;
 }*/
-
-#second{
+#second {
+  margin: 0 auto;
+  background-position: center;
+  background-size: cover;
+  background-color: darksalmon;
+  height: 100vh;
+  max-width: 1200px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.my_form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+footer {
+  margin: 5px auto;
+  width: 1200px;
+  padding: 10px 0;
+  height: 36px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  font-family: 'Sedgwick Ave Display', cursive;
+  font-size: 30px;
+}
+@media only screen and (max-width: 320px) {
+  header {
     margin: 0 auto;
-    background-position: center;
-    background-size: cover;
-    background-color: darksalmon;
-    height: 100vh;
-    max-width: 1200px;
-    position: relative;
+  }
+  .empty {
+    width: 320px;
+  }
+  .cookies_info {
+    width: 320px;
+  }
+  .top_sentence {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.my_form{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-footer{
-    margin: 5px auto;
-    width: 1200px;
-    padding: 10px 0;
-    height: 36px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    font-family: 'Sedgwick Ave Display', cursive;
+  }
+  h1 {
     font-size: 30px;
-}
-
-@media only screen and (max-width: 320px){
-    header{
-        margin: 0 auto;
-    }
-    .empty{
-        width: 320px;
-    }
-    .cookies_info{
-        width: 320px;
-    }
-    .top_sentence{
-        display: flex;
-        justify-content: center;
-    }
-    h1{
-        font-size: 30px;
-    }
-    #first{
-        display: flex;
-        justify-content: center;
-        max-width: 300px;
-        height: 1400px;
-    }
-    .photos{
-        display: flex;
-        flex-direction: column;
-        margin: 0 auto;
-    }
-    .frame{
-        width: 280px;
-        display: flex;
-        justify-content: center;
-    }
-    .under_photo{
-        width: 260px;
-    }
-    #photo1, #photo2, #photo3{
-        width: 260px;
-        height: 173px;
-    }
-    #second{
-        max-width: 300px;
-        height: 1000px;
-    }
-    .info_sentence{
-        font-size: 20px;
-        width: 260px;
-    }
-    .my_form{
-        display: flex;
-        flex-direction: column;
-    }
-    footer{
-        width: 300px;
-        height: 180px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-    footer > img{
-        width: 30px;
-        height: 30px;
-    }
+  }
+  #first {
+    display: flex;
+    justify-content: center;
+    max-width: 300px;
+    height: 1400px;
+  }
+  .photos {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .frame {
+    width: 280px;
+    display: flex;
+    justify-content: center;
+  }
+  .under_photo {
+    width: 260px;
+  }
+  #photo1,
+  #photo2,
+  #photo3 {
+    width: 260px;
+    height: 173px;
+  }
+  #second {
+    max-width: 300px;
+    height: 1000px;
+  }
+  .info_sentence {
+    font-size: 20px;
+    width: 260px;
+  }
+  .my_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  footer {
+    width: 300px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  footer img {
+    width: 30px;
+    height: 30px;
+  }
 }
