--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@ body {
   width: 100%;
   margin: 0;
 }
+#header div .top_info div .cookies div .empty div .cookies_info {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: darkolivegreen;
+}
 .top_info {
   display: flex;
   flex-direction: column;
@@ -34,12 +40,6 @@ body {
   width: 100%;
   height: 30px;
 }
-.cookies_info {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: darkolivegreen;
-}
 .buttons {
   display: flex;
   justify-content: center;
@@ -52,9 +52,16 @@ body {
   background-position: center;
   background-size: cover;
   background-color: darkslategray;
-  height: 110vh;
+  min-height: 110vh;
   max-width: 100%;
   /*position: relative;*/
+}
+#first div.container-fluid div.row .justify-content-center div.col-xs-4 .my_box div.frame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  height: 233px;
 }
 .top_sentence {
   margin-top: 10px;
@@ -69,13 +76,6 @@ h1 {
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
-}
-.frame {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 350px;
-  height: 233px;
 }
 .under_photo {
   width: 350px;
@@ -111,7 +111,7 @@ h1 {
   align-items: center;
   justify-content: center;
 }
-.my_form {
+#second .email_form div.container .my_form {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -125,6 +125,10 @@ footer {
   justify-content: space-around;
   font-family: 'Sedgwick Ave Display', cursive;
   font-size: 30px;
+}
+footer div.container div.row .bottom_row {
+  display: flex;
+  justify-content: space-around;
 }
 @media only screen and (max-width: 320px) {
   header {
