Done with Less and Bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -19,28 +19,38 @@ body {
   width: 100%;
   margin: 0;
 }
-header div .top_info div .cookies div .empty div .cookies_info {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: darkolivegreen;
-}
-.top_info {
+header div.top_info {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
-#cookies {
+header div.top_info div#cookies {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
 }
-.empty {
+header div.top_info div#cookies div.empty {
   width: 100%;
   height: 30px;
 }
-.buttons {
+header div.top_info div#cookies div.empty div.cookies_info {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: darkolivegreen;
+}
+header div.top_info div#cookies div.empty div.buttons {
+  display: flex;
+  justify-content: center;
+}
+.top_sentence {
+  margin-top: 10px;
+}
+.top_sentence h1 {
+  font-size: 50px;
+  color: brown;
   display: flex;
   justify-content: center;
 }
@@ -54,30 +64,20 @@ header div .top_info div .cookies div .empty div .cookies_info {
   background-color: darkslategray;
   min-height: 110vh;
   max-width: 100%;
-  /*position: relative;*/
 }
-#first div.container-fluid div.row .justify-content-center div.col-xs-4 .my_box div.frame {
+#first div.container-fluid div.row .justify-content-center div.col-4 .mybox {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+#first div.container-fluid div.row .justify-content-center div.col-4 .mybox div.frame {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 350px;
   height: 233px;
 }
-.top_sentence {
-  margin-top: 10px;
-}
-h1 {
-  font-size: 50px;
-  color: brown;
-  display: flex;
-  justify-content: center;
-}
-.photos {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-.under_photo {
+#first div.container-fluid div.row .justify-content-center div.col-4 .mybox div.under_photo {
   width: 350px;
   margin: 20px;
 }
@@ -121,14 +121,10 @@ footer {
   width: 100%;
   padding: 10px 0;
   height: 56px;
-  display: flex;
-  justify-content: space-around;
+  /*display: flex;
+  justify-content: space-around;*/
   font-family: 'Sedgwick Ave Display', cursive;
   font-size: 30px;
-}
-footer div.container div.row .bottom_row {
-  display: flex;
-  justify-content: space-around;
 }
 @media only screen and (max-width: 320px) {
   header {
