--- a/css/style.css
+++ b/css/style.css
@@ -65,20 +65,22 @@ header div.top_info div#cookies div.empty div.buttons {
   min-height: 110vh;
   max-width: 100%;
 }
-#first div.container-fluid div.row .justify-content-center div.col-4 .mybox {
+#first div.container-fluid div.row .justify-content-center div.col-4 div.mybox {
   display: flex;
   justify-content: center;
+  width: 300px;
+  height: 220px;
   margin-bottom: 10px;
 }
-#first div.container-fluid div.row .justify-content-center div.col-4 .mybox div.frame {
+#first div.container-fluid div.row .justify-content-center div.col-4 div.mybox div.frame {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 350px;
-  height: 233px;
+  width: 300px;
+  height: 200px;
 }
-#first div.container-fluid div.row .justify-content-center div.col-4 .mybox div.under_photo {
-  width: 350px;
+#first div.container-fluid div.row .justify-content-center div.col-4 div.mybox div.under_photo {
+  width: 300px;
   margin: 20px;
 }
 #photo1,
