--- a/css/style.less
+++ b/css/style.less
@@ -58,7 +58,7 @@ header{
   }
 }
 
-#first{
+#first {
   #center-column;
   margin: 0;
   background-position: center;
@@ -66,22 +66,27 @@ header{
   background-color: darkslategray;
   min-height: 110vh;
   max-width: @max-width;
-  div.container-fluid{
-    div.row .justify-content-center{
-      div.col-4 .mybox{
-        display: flex;
-        justify-content: center;
-        margin-bottom: 10px;
-        div.frame{
-          #center-column;
-          width: 350px;
-          height: 233px;
-        }
-        div.under_photo{
-          width: 350px;
-          margin: 20px;
+  div.container-fluid {
+    div.row .justify-content-center {
+      div.col-4 {
+        div.mybox {
+          display: flex;
+          justify-content: center;
+          width: 300px;
+          height: 220px;
+          margin-bottom: 10px;
+          div.frame {
+            #center-column;
+            width: 300px;
+            height: 200px;
+          }
+          div.under_photo {
+            width: 300px;
+            margin: 20px;
+          }
         }
       }
+
     }
   }
 }
